assets/sass/pages/_about-page.scss
.about-page {
	padding-bottom: 80px;

	&__header {
		display: grid;
	    grid-template-columns: 1fr;
	    grid-template-rows: 1fr;
		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
		height: 350px;
		max-width: 100vw;
	    max-height: 40vh;
	    overflow: hidden;
	    align-items: center;
	    @include background-gradient();
	    background-blend-mode: multiply;
	    
		.about-page__title {
			grid-column: 1 / 2;
		    grid-row: 1 / 2;
			text-transform: uppercase;
			color: white;
			margin: auto;
		    align-self: center;
			max-width: $content-width;
			z-index: 1;
		}

		.about-page__hero-image {
		    grid-column: 1 / 2;
		    grid-row: 1 / 2;
		    position: relative;
		    left: 50%;
		    transform: translateX(-50%);
	        height: 100%;
	        min-height: 100%;
	        max-width: 2880px;
		    overflow: hidden;
		    opacity: 0.5;
        }
	}

	&__intro {
		display: grid;
		grid-template-columns: 1fr;
		grid-template-rows: 1fr;
		height: 40vh;
		max-height: 160px;
		max-width: 800px;
		margin: 100px auto;
		animation-delay: 0.3s;

		&__text {
			text-align: center;
			@include render-type-style(big-copy, $type-styles);
		}
	}

	&__photo-grid {
		display: grid;
		grid-template-columns: 1fr;
		grid-template-rows: 1fr 1fr;
	    align-items: center;
		max-width: $content-width;
		margin: auto;
		animation-delay: 0.6s;

		.left {
			width: 100%;
			grid-column: 1 / 2;
		    grid-row: 1 / 2;
			display: inline-flex;		
		}
		.right {
			width: 100%;
			grid-column: 1 / 2;
		    grid-row: 2 / 2;
			display: inline-flex;
		}
	}

	&__our-banners {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
		max-width: $content-width;
		margin: 80px auto;
	    align-items: center;

		&__title {
			text-transform: uppercase;
			margin: 40px auto;
		    width: 100%;
		    text-align: center;
			@include render-type-style(subhead-1, $type-styles);
		}

		.banner-logo--link {
			display: flex;
	        margin: 30px;
		    max-height: 60px;
		    max-width: 156px;
		    opacity: 0.5;
		    transition: opacity 200ms ease-out;

		    &:hover {
		    	opacity: 1;
		    }
		}

	    .banner-logo {
	    	width: 100%;

		    &--gilt {
			    max-height: 35px;
		    }
	    }

	}


	&__locations {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
		max-width: $content-width;
		margin: 80px auto;

		&__title {
			text-transform: uppercase;
			margin: 40px auto;
		    width: 100%;
		    text-align: center;
			@include render-type-style(subhead-1, $type-styles);
		}

	    .location {
			width: calc(100% - 20px);
	    	height: 330px;
	    	max-height: calc(90vw - 20px);
	    	margin-bottom: 40px;
			display: grid;
			grid-template-columns: 1fr;
			grid-template-rows: 1fr;
		    align-items: center;
		    text-align: center;
		    position: relative;

		    &:before {
		    	content: '';
		    	display: block;
		    	position: absolute;
		    	background-color: black;
		    	height: 100%;
		    	width: 100%;
		    	opacity: 0.2;
		    }

		    &__label {
		    	color: white;
		    	@include render-type-style(headline-2, $type-styles);
		    	// font-size: 48px;
		    	// font-weight: 700;
		    	z-index: 1;
		    }

		    &--new-york {
		    	background: url('../images/new-york.jpg') 50% 50% / cover no-repeat;
		    }

		    &--dublin {
		    	background: url('../images/dublin.jpg') 100% 100% / 170% no-repeat;
		    }
		}
	}

	@include media('>=small', 'landscape') {
		&__header {
		    max-height: 70vh;
		}

		&__intro {
			height: 70vh;
		}

		&__photo-grid {
			margin: auto;
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr;

			.left {
				grid-column: 1 / 2;
			    grid-row: 1 / 2;
			}

			.right {
				grid-column: 2 / 2;
			    grid-row: 1 / 2;
			}
		}

		&__locations {
			.location {
				width: calc(100% / 2 - 10px);
		    	max-height: calc(90vw / 2 - 20px);
				margin: 0;
				margin-right: 10px;

				&:last-child {
					margin-left: 10px;
					margin-right: 0;
				}

			    &--dublin {
			    	background: url('../images/dublin.jpg') 100% 100% / 200% no-repeat;
			    }
			}
		}
	}

	// medium
	@include media('>=medium') {
		&__header {
		    max-height: 60vh;
			margin: 0 ($content-side-margins-large*-1) 0 ($content-side-margins-large*-1);

			.about-page__hero-image {
				height: auto;
			}
		}

		&__photo-grid {
			margin: auto;
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr;

			.left {
				grid-column: 1 / 2;
			    grid-row: 1 / 2;
			}

			.right {
				grid-column: 2 / 2;
			    grid-row: 1 / 2;
			}
		}

		&__locations {
			.location {
				width: calc(100% / 2 - 10px);
		    	max-height: calc(90vw / 2 - 20px);
				margin: 0;
				margin-right: 10px;

				&:last-child {
					margin-left: 10px;
					margin-right: 0;
				}

			    &--dublin {
			    	background: url('../images/dublin.jpg') 100% 100% / 170% no-repeat;
			    }
			}
		}

		// reveal animations
		&__intro,
		&__photo-grid {
			top: 200px;
		}

		&__header,
		&__intro,
		&__photo-grid {
			position: relative;
			opacity: 0;

			&--reveal {
				animation-name: reveal-article;
				animation-duration: 0.6s;
				animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
				animation-direction: normal;
				animation-iteration-count: 1;
				animation-fill-mode: forwards;
			}
		}
	}

	// large
	@include media('>=large') {
		&__header {
			margin: auto;
		}
	}

}

